# book-tutor-agent

./: .env.example  .gitignore  DEV.md  LICENSE  README.md  pyproject.toml  run_pipeline.py
configs/: README.md  continue-mcp.json  cursor-mcp.json  vscode-mcp.json
scripts/: install.ps1
src/book_tutor_agent/: __init__.py  __main__.py  pdf_detector.py  pipeline.py  server.py
src/book_tutor_agent/_book_tutor/: .gitignore  LICENSE  README.md  _migrate_filenames.md  _migrate_run.py  agent_sdk.py  book.py  book_article.py  book_audiobook.py  book_breakdown.py  book_keypoints.py  book_restyle.py  book_skeleton.py  book_summarize.py  book_teach.py  book_tts.py  filename_utils.py  requirements.txt  test-book.md  test_parse_result.py
src/book_tutor_agent/_book_tutor/prompts/: book_article.md  book_article_lite.md  book_audiobook.md  book_breakdown.md  book_breakdown_lite.md  book_reflect.md  book_restyle.md  book_ssml.md  book_translate.md  chapter_compressor.md  chapter_keypoints.md  chapter_skeleton.md  chapter_summarizer.md  chapter_teacher.md  chapter_teacher_update_extension.md  keypoints_unifier.md
src/book_tutor_agent/_markitdown/: __main__.py
src/book_tutor_agent/_markitdown/converters/: _epub_converter.py  _image_sink.py  _markdownify.py
src/book_tutor_agent/_markitdown_ocr/: _docx_converter_with_ocr.py  _ocr_service.py  _pdf_converter_llm_full_page.py  _pdf_converter_with_ocr.py  _pdf_llm_prompts.py  _plugin.py  _pptx_converter_with_ocr.py  _xlsx_converter_with_ocr.py
src/book_tutor_agent/skills/book-tutor/: SKILL.md
(+73 files in other folders)
